# UGTS-DTI

./: .pre-commit-config.yaml  Makefile  pyproject.toml
configs/: default.yaml
src/: Main.py
src/core/: trainer.py
src/deep_dti.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/models/: __init__.py
src/models/fusion/: __init__.py  uncertainty.py
src/models/student/: hdn.py
src/models/teacher/: __init__.py  builders.py  interaction_gnn.py  layers.py
src/ugts_dti.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/utils/: config.py  engine.py  metrics.py
